# do-langchain

./: README.md  env_utils.py  pyproject.toml
docs/: Chunking.md  Context_Engineering.md  LCEL.md  LLM.md  Loaders.md  Parsers.md  Patterns.md  Prompt_Engineering.md  Splitters.md
notebooks/: foundational_models.ipynb
src/agent-tools/: calc_tool_agent.py  web_search_tool_agent.py
src/agents/: custom_prompt_agent.py  multimodal_messages_agent.py  simple_agent.py  streaming_agent.py  structured_output_agent.py
src/agents/personal-chef-agent/: personal_chef_agent.py
src/chat/: llm_instructor_style.py  llm_json_output.py  output_parsers.py
src/chat/lcel/: parallel_branching_chain.py  runnable_lambda_step.py  sequential_chain.py  streaming_and_batching.py  structured_output_parsing.py
src/chat/output/: streaming_output.py
src/chat/simple/: basic_batch.py  basic_chain.py  basic_stream.py  core_concepts.py  llm_chat.py  simple_chat.py
src/chat/structured/: llm_pydantic_schema_output.py
src/context_engineering/: Memory_Pattern.py  runnable_passthrough_context.py  state_memory.py
src/context_engineering/loaders_chunking/: Document_Loaders.py  TextLoader.py
src/context_engineering/resources/: sample.txt
src/lcel/structured_output/: output_parsers.py  structured_output.py
src/loaders_chunking/: Document_Loaders.py  WebLoader.py  chunking_splitters.py
src/memory/: state_memory.py
src/notebooks/: foundational_models.ipynb  multi_model_messages.ipynb
src/patterns/: CoT_Pattern.py  ReAct_Pattern.py  ToT_Pattern.py
src/personal-chef-agent/: langgraph.json  personal_chef_agent.py
src/prompt_engineering/: SelfConsistency_Pattern.py  SystemPrompt_Pattern.py  multi_turn_prompt.py  persona_prompt.py  zero_shot_prompt.py
src/utils/: llm_utils.py
(+9 files in other folders)
