[project]
name = "do-langchain"
version = "0.1.0"
description = "LangChain, LangGraph, LangSmith"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.30.0",
    "scraper>=0.1.0",
    "requests>=2.33.1",
    "bs4>=0.0.2",
    "ipython>=9.12.0",
    "tiktoken>=0.12.0",
    "langchain[anthropic,google-genai,groq,mistralai,openai]>=1.2.16",
    "python-dotenv>=1.2.2",
    "ipykernel>=7.2.0",
    "langchain-tavily>=0.2.18",
    "tavily-python>=0.7.24",
    "tavily>=1.1.0",
    "pypdf>=6.10.2",
    "mcp>=1.27.0",
    "langgraph>=1.1.10",
    "langgraph-cli>=0.4.24",
    "ipywidgets>=8.1.8",
    "sounddevice>=0.5.5",
    "scipy>=1.17.1",
    "langchain-google-vertexai>=3.2.3",
    "langsmith>=0.7.38",
    "jupyterlab>=4.5.7",
    "langchain-community>=0.4.1",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
