[project]
name = "do-langchain"
version = "0.1.0"
description = "LangChain, LangGraph, LangSmith"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.48.0",
    "requests>=2.34.2",
    "ipython>=9.15.0",
    "tiktoken>=0.13.0",
    "langchain[anthropic,google-genai,groq,openai]>=1.3.14",
    "python-dotenv>=1.2.2",
    "ipykernel>=7.3.0",
    "tavily-python>=0.7.26",
    "pypdf>=6.14.2",
    "langgraph>=1.2.9",
    "langgraph-cli>=0.4.31",
    "ipywidgets>=8.1.8",
    "sounddevice>=0.5.5",
    "scipy>=1.18.0",
    "langsmith>=0.10.10",
    "jupyterlab>=4.6.2",
    "langchain-community>=0.4.2",
    "beautifulsoup4>=4.15.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"
